Bug 69636 - FILESAVE: DOCX Export of vertical text-box turns to normal text-box
Summary: FILESAVE: DOCX Export of vertical text-box turns to normal text-box
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:4.2.0 target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-21 10:59 UTC by Adam CloudOn
Modified: 2013-11-28 16:09 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
DOCX containing vertical text-box (23.22 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-09-21 10:59 UTC, Adam CloudOn
Details
DOCX exported by LO with horizontal text-box (5.96 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-09-21 11:00 UTC, Adam CloudOn
Details
Screenshot comparison between original DOCX and exported DOCX (38.30 KB, image/png)
2013-09-21 11:00 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-09-21 10:59:04 UTC
Created attachment 86236 [details]
DOCX containing vertical text-box

Problem description: 
When you load a DOCX that contains a vertical text-box, LO exports it back to DOCX as a horizontal text-box.

Steps to reproduce:
1. Load attached DOCX in LO
2. Save as NEW.DOCX
3. Load NEW.DOCX in Word
4. Vertical text-box is now horizontal text-box

Current behavior:
LO exports vertical text-box as horizontal text-box

Expected behavior:
LO should export vertical text-box correctly
              
Operating System: All
Version: 4.2.0.0.alpha0+ Master
Comment 1 Adam CloudOn 2013-09-21 11:00:21 UTC
Created attachment 86237 [details]
DOCX exported by LO with horizontal text-box
Comment 2 Adam CloudOn 2013-09-21 11:00:45 UTC
Created attachment 86238 [details]
Screenshot comparison between original DOCX and exported DOCX
Comment 3 Miklos Vajna 2013-09-25 17:21:22 UTC
I'll look into this.
Comment 4 Commit Notification 2013-09-26 10:51:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8738ded7bb1bb6262fe1038e310b5110407f4cfa

fdo#69636 VML import: handle mso-layout-flow-alt shape prop for sw frames



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-09-27 09:34:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3da8490e6ca18072ce537bc6e00c198007df229b

fdo#69636 VML export: handle mso-layout-flow-alt shape prop for sw frames



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 retired 2013-11-17 13:16:05 UTC
FIXED in Version: 4.2.0.0.alpha1+
Build ID: 868103846b9b32bfecd77c08055fdca69d0265c2
TinderBox: MacOSX-x86@48-TDF, Branch:master, Time: 2013-11-14_23:51:46

Thanks for the fix Miklos.
Comment 7 retired 2013-11-17 13:16:24 UTC
and since I just tested this the fix is also VERIFIED.
Comment 8 Commit Notification 2013-11-28 14:32:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=efcc8ddd213e7f7a341526bdcffcee75d8fef77f

fdo#69636 DOCX drawingML shape import: handle vert=vert270 prop for sw frames



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-11-28 16:08:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c992a54b662d39c860784aff7357b163db63dfb

fdo#69636 DOCX export: fix VML export of vert=vert270 drawingML textframes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Miklos Vajna 2013-11-28 16:09:26 UTC
The above two commits just ensure that this will continue to work when we switch from VML import to drawingML import by default (when both formats are available in the document), right now they're not that interesting yet.