writerfilter/source/dmapper/DomainMapper.cxx
@@ -3649,6 +3649,9 @@ void DomainMapper::PopListProperties()
 void DomainMapper::lcl_startCharacterGroup()
 {
     m_pImpl->PushProperties(CONTEXT_CHARACTER);
+    if (m_pImpl->m_bFrameBtLr)
+        // No support for this in core, work around by char rotation, as we do so for table cells already.
+        m_pImpl->GetTopContext()->Insert(PROP_CHAR_ROTATION, uno::makeAny(sal_Int16(900)));
 }
 
 void DomainMapper::lcl_endCharacterGroup()
